refactor: docs modified on swagger
